--- a/vite-template-react-ts-jest-main/src/components/globalComponents/globalNav/GlobalNav.css
+++ b/vite-template-react-ts-jest-main/src/components/globalComponents/globalNav/GlobalNav.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed);
 .globalNav {
     display: flex;
     position: absolute;
@@ -6,35 +7,84 @@
     align-items: center;
     justify-content: space-between;
     background-color: #474747;
-    height: 50px;
+    height: 40px;
     width: 100%;
-    
 }
 
 .globalNavDivLogo {
     display: flex;
     align-items: center;
-    background-color: red;
+    background-color: #474747;
     height: 100%;
     width: 20%;
 }
 
 .globalNavLogoH1 {
     font-size: 1.5rem;
-    font-weight: 700;
 }
 
 .globalNavDivLinks {
     display: flex;
     align-items: center;
-    background-color: blue;
+    background-color: #313131;
     height: 100%;
     width: 80%;
-    flex-direction: row;
-}
+
+}/* 
+    https://www.sliderrevolution.com/resources/css-link-styles/
+    Link hover by Hafiz Fattah, remade to work for css and not scss 
+*/
 
 .globalNavLinkList {
+    width: 100%;
     display: flex;
     list-style: none;
+    text-decoration: none;
+    flex-direction: row;
     justify-content: space-between;
+    color: #797878; 
+    &:before, &:after { 
+      content: ""; 
+      display: table;
+    }
+    &:after { 
+      clear: both; 
+    }
+}
+
+.globalNavLinkListElement {
+    list-style: none;
+    position: relative;
+    padding: 3px;
+    transition: (.3s ease-out .1s);
+}
+
+.globalNavLinkListElement a {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size:20px;
+    text-decoration:none;
+    color: #797878;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.globalNavLinkListElement a::after {
+    height: 2px;
+    width: 100%;
+    background: white;
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: 0;
+    transform: scaleX(0);
+    transition: (.3s);
+}
+
+.globalNavLinkListElement a:hover::after {
+    transform: scaleX(1);
+}
+
+.globalNavLinkListElement a:hover {
+    color: white;
 }
