--- a/vite-template-react-ts-jest-main/src/components/globalComponents/globalNav/GlobalNav.css
+++ b/vite-template-react-ts-jest-main/src/components/globalComponents/globalNav/GlobalNav.css
@@ -30,7 +30,8 @@
     height: 100%;
     width: 80%;
 
-}/* 
+}
+/* 
     https://www.sliderrevolution.com/resources/css-link-styles/
     Link hover by Hafiz Fattah, remade to work for css and not scss 
 */
