--- a/frontend/src/components/worldMapComponents/LanguageButtonContainer/LanguageButtonContainer.css
+++ b/frontend/src/components/worldMapComponents/LanguageButtonContainer/LanguageButtonContainer.css
@@ -1,12 +1,27 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+.selecth2{
+height: 30px;
+width: auto;
+font-size: 20px;
+width: 15vw; 
+z-index: 1001;
+position: absolute;
+}
+
 .container{
+    margin-top: 15px;
+    margin-left: 10px;
     z-index: 1001;
     display: flex;
     flex-direction: column;
-    width: 10vw; 
-    border: 10px solid; 
+    width: 15vw; 
+    border: 3px solid rgb(118, 118, 196); 
     position: absolute;
-
-    padding: 0;
-    margin: 0;
-
+    height: 70vh;
+    align-items: center;
+    overflow:scroll;
+    overflow-x:hidden;
 }
