--- a/frontend/src/components/worldMapComponents/LanguageButton/LanguageButton.css
+++ b/frontend/src/components/worldMapComponents/LanguageButton/LanguageButton.css
@@ -7,5 +7,6 @@ button{
     z-index: 1001;
     width: 100%;
     height: auto;
-    border: 3px solid rgb(13, 13, 129)
+    border: 3px solid rgb(13, 13, 129);
+    background-color: gray;
 }
