--- a/frontend/src/components/worldMapComponents/LanguageButtonContainer/LanguageButtonContainer.css
+++ b/frontend/src/components/worldMapComponents/LanguageButtonContainer/LanguageButtonContainer.css
@@ -7,21 +7,34 @@ height: 30px;
 width: auto;
 font-size: 20px;
 width: 15vw; 
-z-index: 1001;
-position: absolute;
-}
+background-color: rgb(118, 118, 196)
 
-.container{
-    margin-top: 15px;
-    margin-left: 10px;
+}
+.languageContainer{
     z-index: 1001;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     width: 15vw; 
-    border: 3px solid rgb(118, 118, 196); 
+    
     position: absolute;
     height: 70vh;
     align-items: center;
+    background-color: rgb(255, 255, 255);
+  
+
+
+}
+.container{
+    margin-left: 10px;
+    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 100%; 
+    height: 100%;
+    align-items: center;
     overflow:scroll;
     overflow-x:hidden;
+    scrollbar-width: thin;
+    scrollbar-color: rgb(10, 10, 140) rgb(118, 118, 196);
 }
