--- a/frontend/src/components/globalComponents/globalFooter/GlobalFooter.css
+++ b/frontend/src/components/globalComponents/globalFooter/GlobalFooter.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed);
 .globalFooter {
     margin-top: auto;
-    background-color: #474747;
+    background-color: #574B60;
     width: 100%;
     height: 150px;
 }
@@ -53,7 +53,7 @@
     text-decoration: none;
     flex-direction: column;
     justify-content: space-between;
-    color: #797878; 
+    color: #A1A2A5; 
     &:before, &:after { 
       content: ""; 
       display: table;
@@ -74,7 +74,7 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-size:15px;
     text-decoration:none;
-    color: #797878;
+    color: #A1A2A5;
 }
 
 .globalFooterListElement a:hover {
