--- a/frontend/src/pages/homePage.css
+++ b/frontend/src/pages/homePage.css
@@ -1,3 +1,7 @@
 .homePage {
     min-height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
