--- a/frontend/src/pages/creditsPage.css
+++ b/frontend/src/pages/creditsPage.css
@@ -1,3 +1,54 @@
 .creditsPage {
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.personpage{
+display: flex;
+flex-wrap: wrap;
+background-color:  white;
+justify-content: space-evenly;
+border-radius: 10px;
+}
+
+
+.person {
+    width: 40%;
+    height: 300px;
+    background-color: #574B60;
+    margin-top: 40px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center; 
+    transition: transform 0.6s ease; 
+    transform-origin: center; /
+  }
+
+
+
+.person:hover {
+    transform: scale(1.03); 
+}
+
+
+
+
+.personimg{
+background-color: rgb(0, 0, 0);
+width: 30%;
+height: 60%;
+margin-left: 10px;
+color: white;
+
+}
+
+.personText{
+width: 70%;
+margin-left: 10px ;
+margin-right: 10px;
 }
