--- a/frontend/src/pages/creditsPage.css
+++ b/frontend/src/pages/creditsPage.css
@@ -20,7 +20,8 @@ border-radius: 10px;
     width: 40%;
     height: 300px;
     background-color: #574B60;
-    margin-top: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -36,6 +37,12 @@ border-radius: 10px;
 }
 
 
+.creditsPageP{
+
+font-size: 40px;
+font-style: bold;
+
+}
 
 
 .personimg{
