--- a/frontend/src/components/homeComponents/worldMap/worldMapHeader.css
+++ b/frontend/src/components/homeComponents/worldMap/worldMapHeader.css
@@ -1,9 +1,39 @@
 .worldMapHeader {
-    width: 80vw;
-    height: 80vh; /* Full viewport height */
+    width: 100%;
+    height: 100vh; /* Full viewport height */
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     z-index: 1;
-    position: absolute;
-  }
+    margin-top: 0;
+}
+
+.map-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  pointer-events: none; /* Allow interactions with the map underneath */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 2;
+}
+
+.worldMapHeaderH1 {
+    font-size: 5rem;
+    color: white;
+    margin-bottom: 20px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: bold;
+}
+
+.worldMapHeaderButton {
+    width: 300px;
+    height: 60px;
+    pointer-events: auto;
+}
