--- a/frontend/src/pages/homePage.css
+++ b/frontend/src/pages/homePage.css
@@ -1,7 +1,8 @@
 .homePage {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
