--- a/frontend/src/components/worldMapComponents/map/Map.css
+++ b/frontend/src/components/worldMapComponents/map/Map.css
@@ -9,8 +9,9 @@
   }
 
 .maplibregl-popup {
-  z-index: 1000;
-  height: 200px;
+
+  min-height: 70px;
+  height: auto;
   width: 150px;
   margin-top: -105vh;
   border-radius: 5px;
@@ -18,11 +19,20 @@
   background-color: rgb(255, 255, 255);
 
 }
-
+.maplibregl-popup strong{
+  color: #574B60;
+}
 
 .popupbox{
   display: flex;
   justify-content: center;
-
   border-bottom: #574B60 solid 1px;
+  padding: 5px;
+}
+
+.popup-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+
 }
