--- a/frontend/src/components/worldMapComponents/map/Map.css
+++ b/frontend/src/components/worldMapComponents/map/Map.css
@@ -34,8 +34,9 @@
 }
 
 .popup-title {
-  font-size: 16px;
+  font-size: 24px;
   font-weight: 600;
+  font-weight: bold;
   color: #574B60;
   white-space: normal;
   overflow-wrap: break-word;
@@ -70,9 +71,11 @@
   border: none;
   cursor: pointer;
   color: #574B60;
-  font-size: 18px;
+  font-size: 24px;
   padding: 0;
   margin: 0;
   line-height: 1;
   flex-shrink: 0;
+  width: 30px;
+
 }
