--- a/frontend/src/pages/creditsPage.css
+++ b/frontend/src/pages/creditsPage.css
@@ -42,11 +42,17 @@
     align-items: center;
     justify-content: center; 
     transition: transform 0.6s ease; 
-    transform-origin: center; /
+    transform-origin: center;
   }
 
 .person:hover {
     transform: scale(1.01); 
+}
+
+.personImg, .personText {
+    transform: none;
+    position: relative;
+    will-change: transform;
 }
 
 .personImg{
@@ -58,6 +64,7 @@
     border-radius: 5px;
     border: 1px solid #A1A2A5;
     box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
+    object-fit:cover;
 }
 
 .personText{
