--- a/frontend/src/components/worldMapComponents/map/Map.css
+++ b/frontend/src/components/worldMapComponents/map/Map.css
@@ -77,5 +77,34 @@
   line-height: 1;
   flex-shrink: 0;
   width: 30px;
+}
 
+.popup-content .language-list {
+  max-height: 180px;
+  overflow-y: scroll;
+  padding-left: 3px;
+  margin: 0;
+  list-style-type: disc;
+  list-style-position: inside;
+
+  scrollbar-gutter: stable;
+  scrollbar-width: auto;
+  scrollbar-color: #888 #f5f5f5;
+}
+
+.language-list li {
+  padding-left: 0;
+  margin-left: 0;
+  margin-bottom: 4px;
+}
+
+.popup-content .language-list::-webkit-scrollbar {
+  width: 6px;
+}
+.popup-content .language-list::-webkit-scrollbar-thumb {
+  background-color: #aaa;
+  border-radius: 4px;
+}
+.popup-content .language-list::-webkit-scrollbar-track {
+  background: transparent;
 }
