--- a/frontend/src/components/worldMapComponents/map/Map.css
+++ b/frontend/src/components/worldMapComponents/map/Map.css
@@ -59,7 +59,15 @@
   font-size: 13.5px;
   line-height: 1.4;
   color: #333;
+
+  max-height: calc(100vh - 200px);
+  overflow-y: auto;
+
+  scrollbar-gutter: stable;
+  scrollbar-width: auto;
+  scrollbar-color: #888 #f5f5f5;
 }
+
 
 .popup-content div {
   display: flex;
@@ -81,15 +89,10 @@
 
 .popup-content .language-list {
   max-height: 180px;
-  overflow-y: scroll;
   padding-left: 3px;
   margin: 0;
   list-style-type: disc;
   list-style-position: inside;
-
-  scrollbar-gutter: stable;
-  scrollbar-width: auto;
-  scrollbar-color: #888 #f5f5f5;
 }
 
 .language-list li {
