--- a/frontend/src/components/worldMapComponents/LanguageButtonContainer/LanguageButtonContainer.css
+++ b/frontend/src/components/worldMapComponents/LanguageButtonContainer/LanguageButtonContainer.css
@@ -32,11 +32,14 @@ background-color: rgb(118, 118, 196)
     border-radius: 0px 0px 5px 5px;
     width: 95%;
     height: 20px;
-
+    border-top: 0px solid #574B60;
+    border-bottom: #574B60 solid 1px;
+    border-right: #574B60 solid 1px;
+    border-left: #574B60 solid 1px; 
 }
 
 #clearAllButton:hover {
-    background-color: #A26769;
+    background-color: #A1A2A5;
     cursor: pointer;
 }
 
@@ -59,6 +62,7 @@ Button{
     overflow:scroll;
     overflow-x:hidden;
     align-items: center;
+    scrollbar-width: thin;
     scrollbar-color: #574B60 rgb(255, 255, 255);
     border-bottom: #574B60 solid 1px;   
 }
